# [#22979] Fixed spacing between pagination in forum listing
git-svn-id: file:///Users/oratzes/svn/kunena@3916 daf2aa89-cb5b-0410-b8ee-fe93ebc9b27d

--- a/trunk/1.6/components/com_kunena/template/default/css/kunena.forum.css
+++ b/trunk/1.6/components/com_kunena/template/default/css/kunena.forum.css
@@ -875,6 +875,9 @@ PX		EM			PCT			PT
 #Kunena div.ktopic-title-cover ul.kpagination a:hover{
 	border:solid 1px;
 }
+#Kunena #kflattable ul.kpagination li {
+	margin-right: 5px;
+}
 
 #Kunena span.ktopic-posted-time {
 	display: block;
